fix UI alignment (#149)

--- a/app/javascript/rfa_forms/rfa01a_edit_view/stylesheets/cards-main.scss
+++ b/app/javascript/rfa_forms/rfa01a_edit_view/stylesheets/cards-main.scss
@@ -27,7 +27,7 @@
 .cards-inner form > div {
   margin: 20px 0px
 }
-.name-section form {
+.name-section form, #minorsSection form {
   float: left;
   width: 100%;
 }
